--- a/public/style.css
+++ b/public/style.css
@@ -3109,26 +3109,12 @@ html {
   border-radius: var(--rounded-box, 1rem);
 }
 
-.btn-xs {
-  height: 1.5rem;
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-  min-height: 1.5rem;
-  font-size: 0.75rem;
-}
-
 .btn-sm {
   height: 2rem;
   padding-left: 0.75rem;
   padding-right: 0.75rem;
   min-height: 2rem;
   font-size: 0.875rem;
-}
-
-.btn-square:where(.btn-xs) {
-  height: 1.5rem;
-  width: 1.5rem;
-  padding: 0px;
 }
 
 .btn-square:where(.btn-sm) {
@@ -3314,17 +3300,8 @@ html {
   position: absolute;
 }
 
-.\!absolute {
-  position: absolute !important;
-}
-
 .relative {
   position: relative;
-}
-
-.inset-x-\[15\%\] {
-  left: 15%;
-  right: 15%;
 }
 
 .left-5 {
@@ -3337,34 +3314,6 @@ html {
 
 .top-1\/2 {
   top: 50%;
-}
-
-.right-0 {
-  right: 0px;
-}
-
-.bottom-0 {
-  bottom: 0px;
-}
-
-.left-0 {
-  left: 0px;
-}
-
-.bottom-5 {
-  bottom: 1.25rem;
-}
-
-.top-0 {
-  top: 0px;
-}
-
-.z-\[2\] {
-  z-index: 2;
-}
-
-.z-\[1\] {
-  z-index: 1;
 }
 
 .col-span-2 {
@@ -3395,16 +3344,8 @@ html {
   grid-row-start: 1;
 }
 
-.float-left {
-  float: left;
-}
-
 .m-4 {
   margin: 1rem;
-}
-
-.\!-m-px {
-  margin: -1px !important;
 }
 
 .-mx-3 {
@@ -3442,16 +3383,6 @@ html {
   margin-right: 0.5rem;
 }
 
-.mx-\[15\%\] {
-  margin-left: 15%;
-  margin-right: 15%;
-}
-
-.mx-\[3px\] {
-  margin-left: 3px;
-  margin-right: 3px;
-}
-
 .mb-6 {
   margin-bottom: 1.5rem;
 }
@@ -3480,28 +3411,8 @@ html {
   margin-top: 0.75rem;
 }
 
-.-mr-\[100\%\] {
-  margin-right: -100%;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
-}
-
-.mt-4 {
-  margin-top: 1rem;
-}
-
-.box-content {
-  box-sizing: content-box;
-}
-
 .block {
   display: block;
-}
-
-.inline-block {
-  display: inline-block;
 }
 
 .flex {
@@ -3516,40 +3427,12 @@ html {
   display: none;
 }
 
-.h-\[3px\] {
-  height: 3px;
-}
-
-.h-8 {
-  height: 2rem;
-}
-
-.h-6 {
-  height: 1.5rem;
-}
-
-.\!h-px {
-  height: 1px !important;
-}
-
-.h-20 {
-  height: 5rem;
-}
-
-.h-48 {
-  height: 12rem;
-}
-
 .h-3\/5 {
   height: 60%;
 }
 
-.h-2\/4 {
-  height: 50%;
-}
-
-.h-4\/6 {
-  height: 66.666667%;
+.h-full {
+  height: 100%;
 }
 
 .min-h-screen {
@@ -3581,26 +3464,6 @@ html {
   width: 13rem;
 }
 
-.w-\[30px\] {
-  width: 30px;
-}
-
-.w-\[15\%\] {
-  width: 15%;
-}
-
-.w-8 {
-  width: 2rem;
-}
-
-.w-6 {
-  width: 1.5rem;
-}
-
-.\!w-px {
-  width: 1px !important;
-}
-
 .max-w-lg {
   max-width: 32rem;
 }
@@ -3617,10 +3480,6 @@ html {
   flex: none;
 }
 
-.flex-initial {
-  flex: 0 1 auto;
-}
-
 .flex-shrink-0 {
   flex-shrink: 0;
 }
@@ -3632,14 +3491,6 @@ html {
 
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.cursor-pointer {
-  cursor: pointer;
-}
-
-.list-none {
-  list-style-type: none;
 }
 
 .grid-cols-3 {
@@ -3666,8 +3517,8 @@ html {
   align-content: center;
 }
 
-.items-center {
-  align-items: center;
+.content-end {
+  align-content: flex-end;
 }
 
 .justify-end {
@@ -3694,10 +3545,6 @@ html {
   gap: 1.5rem;
 }
 
-.gap-2 {
-  gap: 0.5rem;
-}
-
 .self-center {
   align-self: center;
 }
@@ -3706,36 +3553,8 @@ html {
   justify-self: end;
 }
 
-.overflow-hidden {
-  overflow: hidden;
-}
-
-.\!overflow-hidden {
-  overflow: hidden !important;
-}
-
-.\!whitespace-nowrap {
-  white-space: nowrap !important;
-}
-
 .rounded-full {
   border-radius: 9999px;
-}
-
-.rounded-md {
-  border-radius: 0.375rem;
-}
-
-.rounded-lg {
-  border-radius: 0.5rem;
-}
-
-.rounded-xl {
-  border-radius: 0.75rem;
-}
-
-.rounded-2xl {
-  border-radius: 1rem;
 }
 
 .rounded-t-2xl {
@@ -3743,34 +3562,13 @@ html {
   border-top-right-radius: 1rem;
 }
 
-.border-0 {
-  border-width: 0px;
-}
-
-.\!border-0 {
-  border-width: 0px !important;
-}
-
-.border-y-\[10px\] {
-  border-top-width: 10px;
-  border-bottom-width: 10px;
-}
-
 .border-b-2 {
   border-bottom-width: 2px;
-}
-
-.border-solid {
-  border-style: solid;
 }
 
 .border-primary-focus {
   --tw-border-opacity: 1;
   border-color: hsl(var(--pf, var(--p)) / var(--tw-border-opacity));
-}
-
-.border-transparent {
-  border-color: transparent;
 }
 
 .bg-base-200 {
@@ -3788,26 +3586,8 @@ html {
   background-color: hsl(var(--b3, var(--b2)) / var(--tw-bg-opacity));
 }
 
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
 .bg-opacity-20 {
   --tw-bg-opacity: 0.2;
-}
-
-.bg-none {
-  background-image: none;
-}
-
-.bg-clip-padding {
-  background-clip: padding-box;
-}
-
-.object-fill {
-  -o-object-fit: fill;
-     object-fit: fill;
 }
 
 .p-2 {
@@ -3816,14 +3596,6 @@ html {
 
 .p-4 {
   padding: 1rem;
-}
-
-.p-0 {
-  padding: 0px;
-}
-
-.\!p-0 {
-  padding: 0px !important;
 }
 
 .px-4 {
@@ -3866,14 +3638,9 @@ html {
   padding-right: 0.25rem;
 }
 
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .pb-2 {
@@ -3892,12 +3659,12 @@ html {
   padding-top: 1.5rem;
 }
 
-.text-center {
-  text-align: center;
+.pt-4 {
+  padding-top: 1rem;
 }
 
-.-indent-\[999px\] {
-  text-indent: -999px;
+.text-center {
+  text-align: center;
 }
 
 .text-2xl {
@@ -3951,21 +3718,12 @@ html {
   color: hsl(var(--bc) / var(--tw-text-opacity));
 }
 
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 .underline {
   text-decoration-line: underline;
 }
 
 .underline-offset-4 {
   text-underline-offset: 4px;
-}
-
-.opacity-50 {
-  opacity: 0.5;
 }
 
 .shadow-2xl {
@@ -3984,38 +3742,6 @@ html {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.transition-opacity {
-  transition-property: opacity;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
-.transition-transform {
-  transition-property: transform;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
-.duration-\[600ms\] {
-  transition-duration: 600ms;
-}
-
-.duration-150 {
-  transition-duration: 150ms;
-}
-
-.ease-\[cubic-bezier\(0\.25\2c 0\.1\2c 0\.25\2c 1\.0\)\] {
-  transition-timing-function: cubic-bezier(0.25,0.1,0.25,1.0);
-}
-
-.ease-in-out {
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.\!\[clip\:rect\(0\2c 0\2c 0\2c 0\)\] {
-  clip: rect(0,0,0,0) !important;
 }
 
 ul.menu li a:hover{
@@ -4073,61 +3799,11 @@ a:hover, i:hover{
   padding: 1rem;
 }
 
-.after\:clear-both::after {
-  content: var(--tw-content);
-  clear: both;
-}
-
-.after\:block::after {
-  content: var(--tw-content);
-  display: block;
-}
-
-.after\:content-\[\'\'\]::after {
-  --tw-content: '';
-  content: var(--tw-content);
-}
-
-.hover\:text-white:hover {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.hover\:no-underline:hover {
-  text-decoration-line: none;
-}
-
-.hover\:opacity-90:hover {
-  opacity: 0.9;
-}
-
-.hover\:outline-none:hover {
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-}
-
-.focus\:text-white:focus {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.focus\:no-underline:focus {
-  text-decoration-line: none;
-}
-
-.focus\:opacity-90:focus {
-  opacity: 0.9;
-}
-
-.focus\:outline-none:focus {
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-}
-
-@media (prefers-reduced-motion: reduce) {
-  .motion-reduce\:transition-none {
-    transition-property: none;
-  }
+.card-body-feed {
+  display: flex;
+  flex: 1 1 auto;
+  flex-direction: column;
+  gap: 2rem;
 }
 
 @media (min-width: 640px) {
@@ -4171,10 +3847,6 @@ a:hover, i:hover{
 
   .md\:mb-0 {
     margin-bottom: 0px;
-  }
-
-  .md\:block {
-    display: block;
   }
 
   .md\:w-2\/3 {
