--- a/src/style.css
+++ b/src/style.css
@@ -56,3 +56,10 @@ a:hover, i:hover{
   gap: 1rem;
   padding: 1rem;
 }
+
+.card-body-feed {
+  display: flex;
+  flex: 1 1 auto;
+  flex-direction: column;
+  gap: 2rem;
+}
