--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,10 +11,10 @@
     <div class="lg:max-w-md md:max-w-xl md:mx-auto ">
       <h3 class="text-2xl md:text-3xl font-bold">Rate Your Rental: The Ultimate Review Platform for Renters</h3>
       <p class="py-3">Take control of your rental experience. Share honest assessments of your property and landlord with a community of like-minded renters. Help others make informed decisions and make your voice heard. Sign up now and elevate your rental journey!</p>
-      <% if(user == undefined){ %>   
+      <% if(loggedInUser == undefined){ %>   
       <a href="/signup"><button class="btn btn-sm btn-primary">Sign up today</button></a>
       <% } %>
-      <p class="<% if(user == undefined){ %>pt-3<% } %>">Our mission is to empower renters in the UK to make informed decisions and elevate their rental experience. We aim to provide a platform where renters can openly and honestly share their experiences with properties and landlords, while fostering a supportive community of like-minded individuals. Through our platform, we strive to promote transparency and accountability in the rental industry, ultimately benefiting all renters in the UK.</p>
+      <p class="<% if(loggedInUser == undefined){ %>pt-3<% } %>">Our mission is to empower renters in the UK to make informed decisions and elevate their rental experience. We aim to provide a platform where renters can openly and honestly share their experiences with properties and landlords, while fostering a supportive community of like-minded individuals. Through our platform, we strive to promote transparency and accountability in the rental industry, ultimately benefiting all renters in the UK.</p>
     </div>
   </div>
   </div>
