--- a/views/property.ejs
+++ b/views/property.ejs
@@ -11,7 +11,7 @@
     <!-- image -->
     <% if(review[i].image) {%>
     <div class="sm:mx-4 md:mx-0 lg:w-1/2">
-      <img src="<%= review[i].image%>" class="">
+      <img src="<%= review[i].image%>" class="w-full">
       <p>Image posted by <%= review[i].user.userName%></p>
   </div>
   <% } %>
@@ -22,13 +22,13 @@
 <div class="border-b-2 border-primary-focus px-8 py-6"> <!-- outer review div-->
   <div class="grid grid-cols-12">
     <div class="pb-2 col-span-5"> <!-- posted by and tenancy dates-->
-      <p>Review posted by <%= review[i].user.userName%></p>
+      <p>Review posted by <a href="/profile/<%= review[i].user._id%>"><%= review[i].user.userName%></a></p>
         <% if(review[i].tenancyFrom && review[i].tenancyTo != "") {%>
           <p>Tenancy from <%= review[i].tenancyFrom%> to <%= review[i].tenancyTo%></p>
         <% } %>
         </div>
         <div class="pb-2 col-start-12 justify-self-end"> 
-        <%if(review[i].user._id == user.id){ %>
+        <%if(review[i].user._id == loggedInUser.id){ %>
           <form
             action="/reviews/deleteReview/<%= review[i]._id %>?_method=DELETE"
             method="POST"
@@ -46,7 +46,7 @@
 </div>
 <% } %>
 <div class="pt-6 px-8">
-<% if(user == undefined){ %>
+<% if(loggedInUser == undefined){ %>
 <h3 class="text-xl font-bold pb-2">Want to leave a review for this property? <a href="/login" class="underline underline-offset-4 text-primary-focus">Log in</a> or <a href="/signup" class="underline underline-offset-4 text-primary-focus">create an account</a> today.</h3>
 <% } else{ %> 
   <h3 class="text-xl font-bold pb-2">Want to leave a review for this property? <a href="/reviews" class="underline underline-offset-4 text-primary-focus">Create a review</a> today.</h3>
