--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,19 +11,25 @@
       sizes="32x32"
       href="/imgs/favicon-32x32.png"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
+      crossorigin="anonymous"
+    />
     <script src="https://kit.fontawesome.com/6528dd7a8c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/style.css">
   </head>
 
   
-  <body class="bg-base-200" >
-        <!-- navbar -->
-    <div class="navbar bg-base-300  px-4 hidden">
+  <body class="bg-base-200">
+  <!--medium / large navbar -->
+    <div class="bg-base-300 py-4 px-4 hidden md:navbar">
       <div class="flex-1">
         <a class="btn btn-primary normal-case text-xl" href="/">Rate your rental</a>
       </div>
         <!-- navigation -->
-        <div class="hidden lg:block">
+        <div class="">
           <div class="flex-none">
         <ul class="menu menu-horizontal px-1">
           <li class="mx-1"><a href="/feed">Feed</a></li>
@@ -36,7 +42,6 @@
           <li class="mx-1"><a href="/login">Log in</a></li>
           <% } else{ %> 
           <!-- hide if not logged in -->
-          <li class="mx-1"><a href="/edit">Edit profile</a></li>
           <li class="mx-1"><a href="/logout">Log out</a></li>
           <% } %>
         </ul>
@@ -51,7 +56,41 @@
         </div>
       </div> -->
       <!-- avatar, show only on md and above-->
-      <div class="hidden lg:block">
+      <div class="">
+        <label tabindex="0" class="btn btn-secondary btn-circle avatar mx-2">
+          <div class="w-10 rounded-full">
+            <% if(loggedInUser == undefined){ %>    
+            <a href="/"><img src="/images/stock/cat.jpg" /></a>
+            <% } else{ %> 
+              <a href="/profile/<%= loggedInUser._id%>"><img src="<%= loggedInUser.profilePhoto %>" /></a>
+            <% } %>
+          </div>
+        </label>
+        </div>
+</div>
+
+<!-- small and mobile nav bar -->
+<div class="bg-base-300 py-4 px-4 navbar md:hidden">
+  <div class="flex-1">
+    <a class="btn btn-primary normal-case text-xl" href="/">Rate your rental</a>
+  </div>
+  <div class="dropdown dropdown-end">
+    <ul tabindex="0" class="mt-3 p-2 shadow menu menu-compact dropdown-content bg-base-100 rounded-box w-52">
+        
+        <!-- dropdown if not logged in -->
+        <% if(loggedInUser == undefined){ %>          
+        <li class="mx-1"><a href="/signup">Sign up</a></li>
+        <li class="mx-1"><a href="/login">Log in</a></li>
+        <% } else{ %> 
+        <!-- dropdown if logged in -->
+        <li class="mx-1"><a href="/profile/<%= loggedInUser._id%>">Profile</a></li>
+        <li class="mx-1"><a href="/feed">Feed</a></li>
+        <li class="mx-1"><a href="/reviews">Create review</a></li>
+        <li class="mx-1"><a href="/edit">Edit profile</a></li>
+        <li class="mx-1"><a href="/logout">Log out</a></li>
+        <% } %>
+      </ul>
+      <div class="">
         <label tabindex="0" class="btn btn-secondary btn-circle avatar mx-2">
           <div class="w-10 rounded-full">
             <% if(loggedInUser == undefined){ %>    
@@ -62,59 +101,5 @@
           </div>
         </label>
         </div>
-      <!-- responsive nav, show only below md -->
-    <div class="lg:hidden sm:block">
-      <div class="dropdown dropdown-end">
-        <label tabindex="0" class="btn btn-secondary btn-circle avatar mx-2">
-          <div class="w-10 rounded-full">
-            <% if(loggedInUser == undefined){ %>    
-              <img src="/images/stock/cat.jpg" />
-              <% } else{ %> 
-                <img src="<%= loggedInUser.profilePhoto %>" />
-              <% } %>
-          </div>
-        </label>
-        <ul tabindex="0" class="mt-3 p-2 shadow menu menu-compact dropdown-content bg-base-100 rounded-box w-52">
-            <li class="mx-1"><a href="/profile">Profile</a></li>
-            <li class="mx-1"><a href="/feed">Feed</a></li>
-            <li class="mx-1"><a href="/reviews">Create review</a></li>
-            <!-- hide if logged in -->
-            <% if(loggedInUser == undefined){ %>          
-            <li class="mx-1"><a href="/signup">Sign up</a></li>
-            <li class="mx-1"><a href="/login">Log in</a></li>
-            <% } else{ %> 
-            <!-- hide if not logged in -->
-            <li class="mx-1"><a href="/edit">Edit profile</a></li>
-            <li class="mx-1"><a href="/logout">Log out</a></li>
-            <% } %>
-          </ul>
-      </div>
-    </div>
-    </div>
-
-<!-- mobile navbar -->
-<div class="navbar-mobile bg-base-300 px-4 sm:hidden">
-  <!-- navigation -->
-  <div class="dropdown">
-    <label tabindex="0">
-      <div class="w-10">
-        <i class="fa-solid fa-bars"></i>
-      </div>
-    </label>
-    <ul tabindex="0" class="mt-3 p-2 shadow menu menu-compact dropdown-content bg-base-100 rounded-box w-52">
-      <li class="mx-1"><a href="/">Home</a></li>
-      <li class="mx-1"><a href="/profile">Profile</a></li>
-      <li class="mx-1"><a href="/feed">Feed</a></li>
-      <li class="mx-1"><a href="/reviews">Create review</a></li>
-      <!-- hide if logged in -->
-      <% if(loggedInUser == undefined){ %>          
-      <li class="mx-1"><a href="/signup">Sign up</a></li>
-      <li class="mx-1"><a href="/login">Log in</a></li>
-      <% } else{ %> 
-      <!-- hide if not logged in -->
-      <li class="mx-1"><a href="/edit">Edit profile</a></li>
-      <li class="mx-1"><a href="/logout">Log out</a></li>
-      <% } %>
-    </ul>
   </div>
 </div>
