--- a/views/reviews.ejs
+++ b/views/reviews.ejs
@@ -3,7 +3,7 @@
 <div class="hero min-h-screen" style="background-image: url(/images/street.jpg);">
     <div class="hero-overlay bg-opacity-20"></div>
         <div class="hero-content flex-col lg:flex-row-reverse">
-          <div class="card flex-shrink-0 w-full shadow-2xl bg-base-200 w-max">
+          <div class="card flex-shrink-0 w-full shadow-2xl bg-base-200">
             <div class="card-body">
 <form class="w-full max-w-lg mx-auto" action="/reviews/createReview" enctype="multipart/form-data" method="POST">
   <div class="flex flex-wrap -mx-3 mb-6">
@@ -26,13 +26,13 @@
   <div class="flex flex-wrap -mx-3 mb-6">
     <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
       <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-tenancy-from">
-        Tenancy from
+        Tenancy from (optional)
       </label>
       <input type="date" placeholder="Type here" class="input input-bordered input-primary w-full" id="tenancyFrom" name="tenancyFrom"/>
     </div>
     <div class="w-full md:w-1/2 px-3">
       <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-tenancy-to">
-        Tenancy to
+        Tenancy to (optional)
       </label>
       <input type="date" placeholder="Type here" class="input input-bordered input-primary w-full" id="tenancyTo" name="tenancyTo"/>
     </div>
