made it compulsory for image uploads

--- a/public/style.css
+++ b/public/style.css
@@ -3151,6 +3151,50 @@ html {
   padding: 0px;
 }
 
+.file-input-sm {
+  height: 2rem;
+  padding-right: 0.75rem;
+  font-size: 0.875rem;
+  line-height: 2rem;
+}
+
+.file-input-sm::file-selector-button {
+  margin-right: 0.75rem;
+  height: 1.875rem;
+  min-height: 1.875rem;
+  font-size: 0.875rem;
+}
+
+.file-input-md {
+  height: 3rem;
+  padding-right: 1rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  line-height: 2;
+}
+
+.file-input-md::file-selector-button {
+  margin-right: 1rem;
+  height: 2.875rem;
+  min-height: 2.875rem;
+  font-size: 0.875rem;
+}
+
+.file-input-lg {
+  height: 4rem;
+  padding-right: 1.5rem;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  line-height: 2;
+}
+
+.file-input-lg::file-selector-button {
+  margin-right: 1.5rem;
+  height: 3.875rem;
+  min-height: 3.875rem;
+  font-size: 1.125rem;
+}
+
 .menu-horizontal {
   display: inline-flex;
   width: -moz-max-content;
@@ -3346,6 +3390,10 @@ html {
 
 .col-start-12 {
   grid-column-start: 12;
+}
+
+.col-start-3 {
+  grid-column-start: 3;
 }
 
 .row-start-1 {
@@ -3996,6 +4044,21 @@ a:hover, i:hover{
     font-size: 1.875rem;
     line-height: 2.25rem;
   }
+
+  .md\:file-input-md {
+    height: 3rem;
+    padding-right: 1rem;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+    line-height: 2;
+  }
+
+  .md\:file-input-md::file-selector-button {
+    margin-right: 1rem;
+    height: 2.875rem;
+    min-height: 2.875rem;
+    font-size: 0.875rem;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -4009,6 +4072,10 @@ a:hover, i:hover{
 
   .lg\:col-span-5 {
     grid-column: span 5 / span 5;
+  }
+
+  .lg\:col-span-3 {
+    grid-column: span 3 / span 3;
   }
 
   .lg\:col-start-2 {
