--- a/views/reviews.ejs
+++ b/views/reviews.ejs
@@ -26,13 +26,13 @@
   <div class="flex flex-wrap -mx-3 mb-6">
     <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
       <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-tenancy-from">
-        Tenancy from (optional)
+        Tenancy from
       </label>
       <input type="date" placeholder="Type here" class="input input-bordered input-primary w-full" id="tenancyFrom" name="tenancyFrom"/>
     </div>
     <div class="w-full md:w-1/2 px-3">
       <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-tenancy-to">
-        Tenancy to (optional)
+        Tenancy to
       </label>
       <input type="date" placeholder="Type here" class="input input-bordered input-primary w-full" id="tenancyTo" name="tenancyTo"/>
     </div>
@@ -59,7 +59,7 @@
   <div class="flex flex-wrap -mx-3 mb-6">
     <div class="w-full px-3">
       <div class="mb-3">
-        <label for="imgUpload" class="form-label">Image</label>
+        <label for="imgUpload" class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2">Image</label>
         <input type="file" class="form-control" id="imageUpload" name="file">
       </div>
     </div>
