--- a/views/reviews.ejs
+++ b/views/reviews.ejs
@@ -1,10 +1,33 @@
 <%- include('partials/header') -%>
 
+<!-- <div class="hero"></div>
+<div class="hero-content flex-col lg:flex-row-reverse">
+<div class="card flex-shrink-0 w-full shadow-2xl bg-base-200">
+<div class="card-body">
+<h1 class="lock uppercase tracking-wide text-gray-900 text-2xl font-bold mb-2 mx-auto">create your review</h1>
+
+</div>
+</div>
+</div>
+</div>
+ -->
+
+
 <div class="hero min-h-screen" style="background-image: url(/images/street.jpg);">
     <div class="hero-overlay bg-opacity-20"></div>
         <div class="hero-content flex-col lg:flex-row-reverse">
           <div class="card flex-shrink-0 w-full shadow-2xl bg-base-200">
             <div class="card-body">
+              <h1 class="lock uppercase tracking-wide text-gray-900 text-2xl font-bold mb-2 mx-auto">create your review</h1>
+              
+              </div>
+            <div class="card-body">
+              <% if (locals.messages.errors) { %> <% messages.errors.forEach( el => { %>
+                <div class="alert alert-danger"><%= el.msg %></div>
+                <% }) %> <% } %> <% if (locals.messages.info) { %> <%
+                messages.info.forEach( el => { %>
+                <div class="alert alert-info"><%= el.msg %></div>
+                <% }) %> <% } %>
 <form class="w-full max-w-lg mx-auto" action="/reviews/createReview" enctype="multipart/form-data" method="POST">
   <div class="flex flex-wrap -mx-3 mb-6">
     <!-- street name -->
