profile changed to using username isntead of id

--- a/public/style.css
+++ b/public/style.css
@@ -3742,6 +3742,21 @@ html {
   color: hsl(var(--bc) / var(--tw-text-opacity));
 }
 
+.text-warning {
+  --tw-text-opacity: 1;
+  color: hsl(var(--wa) / var(--tw-text-opacity));
+}
+
+.text-error {
+  --tw-text-opacity: 1;
+  color: hsl(var(--er) / var(--tw-text-opacity));
+}
+
+.text-orange-800 {
+  --tw-text-opacity: 1;
+  color: rgb(154 52 18 / var(--tw-text-opacity));
+}
+
 .underline {
   text-decoration-line: underline;
 }
