--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,7 @@
       <p class="py-3">Take control of your rental experience. Share honest assessments of your property and landlord with a community of like-minded renters. Help others make informed decisions and make your voice heard. Sign up now and elevate your rental journey!</p>
       <% if(loggedInUser == undefined){ %>   
       <a href="/signup"><button class="btn btn-sm btn-primary">Sign up today</button></a>
+      <a href="/feed"><button class="btn btn-sm btn-primary">See reviews</button></a>
       <% } %>
       <p class="<% if(loggedInUser == undefined){ %>pt-3<% } %>">Our mission is to empower renters in the UK to make informed decisions and elevate their rental experience. We aim to provide a platform where renters can openly and honestly share their experiences with properties and landlords, while fostering a supportive community of like-minded individuals. Through our platform, we strive to promote transparency and accountability in the rental industry, ultimately benefiting all renters in the UK.</p>
     </div>
