--- a/views/reviews.ejs
+++ b/views/reviews.ejs
@@ -9,7 +9,7 @@
             <h1 class="block uppercase tracking-wide text-gray-700 text-xl font-bold mb-2 mx-auto">Create your review</h1>
             <p class="tracking-wide text-gray-700 text-base mb-2">This is your chance to share your honest opinion of your rental property, include information such as the facilities, condition of the property, location and how well you were treated by your landlord.</p>
             <p class=" tracking-wide text-gray-700 text-base mb-2">Please remember that the review will be publically available so don't include any personal information.</p>
-            <p class=" tracking-wide text-gray-700 text-sm mb-2">Note: all fields must be completed, including an image upload</p>
+            <p class="text-orange-800 tracking-wide text-gray-700 text-sm mb-2">Note: all fields must be completed, including an image upload</p>
           </div>
           </div>
 
