--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,14 @@
 <%- include('partials/header') -%>
 
-<div class="container mx-auto px-4 py-5 sm:py-4">
-  <div class="lg:grid grid-cols-2 gap-4 content-center">
+<div class="container mx-auto px-4 py-4 sm:py-4">
+  <div class="lg:grid grid-cols-2 gap-2 content-center">
     <!-- col 1 -->
     <div class="lg:col-start-2 row-start-1 mb-4 mx-auto lg:max-w-full md:max-w-md max-w-sm">
     <img src="/images/young_people.jpg" alt="" class="my-2 mx-auto">
   </div>
 <!-- col 2 -->
   <div class="text-center col-start-1 row-start-1 self-center">
-    <div class="lg:max-w-md md:max-w-xl md:mx-auto ">
+    <div class="lg:max-w-lg md:max-w-xl md:mx-auto ">
       <h3 class="text-2xl md:text-3xl font-bold">Rate Your Rental: The Ultimate Review Platform for Renters</h3>
       <p class="py-3">Take control of your rental experience. Share honest assessments of your property and landlord with a community of like-minded renters. Help others make informed decisions and make your voice heard. Sign up now and elevate your rental journey!</p>
       <% if(loggedInUser == undefined){ %>   
@@ -16,6 +16,29 @@
       <a href="/feed"><button class="btn btn-sm btn-primary">See reviews</button></a>
       <% } %>
       <p class="<% if(loggedInUser == undefined){ %>pt-3<% } %>">Our mission is to empower renters in the UK to make informed decisions and elevate their rental experience. We aim to provide a platform where renters can openly and honestly share their experiences with properties and landlords, while fostering a supportive community of like-minded individuals. Through our platform, we strive to promote transparency and accountability in the rental industry, ultimately benefiting all renters in the UK.</p>
+
+
+      <!-- <form class="search--form pt-4" action="/property/search" method="GET">
+        <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-property-address">
+          Find your next property today!
+        </label>
+        <input type="text" placeholder="Search" class="input input-sm input-bordered input-primary w-full max-w-xs" name="address"/>
+        <button class="search--btn" type="submit">
+            <i class="search--icon fa-solid fa-magnifying-glass"></i>
+        </button>
+    </form> -->
+
+    <form class="search--form" action="/property/search/property" method="GET">
+      <input
+          class="search--input"
+          type="text"
+          name="property"
+          placeholder="Search"
+      >
+      <button class="search--btn" type="submit">
+          <i class="search--icon fa-solid fa-magnifying-glass"></i>
+      </button>
+  </form>
     </div>
   </div>
   </div>
