--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header') -%>
 <div class="container mx-auto px-4 py-5">
   <!-- row 1 -->
-  <div class="grid lg:grid-cols-3 gap-4 md:grid-cols-2 grid-cols-1 ">
+  <div class="flex flex-col lg:flex-row justify-evenly gap-4">
       <% for(var i=0; i<property.length; i++) {%>
     <div class="card max-w-sm bg-base-100 shadow-xl mx-auto">
       <figure class="h-3/5 bg-base-100">
