--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header') -%>
 
 <div class="container mx-auto px-4 py-4 sm:py-4">
-  <div class="lg:grid grid-cols-2 gap-2 content-center">
+  <div class="lg:grid grid-cols-2 gap-2 content-center items-center">
     <!-- col 1 -->
     <div class="lg:col-start-2 row-start-1 mb-4 mx-auto lg:max-w-full md:max-w-md max-w-sm">
     <img src="/images/young_people.jpg" alt="" class="my-2 mx-auto">
@@ -10,12 +10,12 @@
   <div class="text-center col-start-1 row-start-1 self-center">
     <div class="lg:max-w-lg md:max-w-xl md:mx-auto ">
       <h3 class="text-2xl md:text-3xl font-bold">Rate Your Rental: The Ultimate Review Platform for Renters</h3>
-      <p class="py-3">Take control of your rental experience. Share honest assessments of your property and landlord with a community of like-minded renters. Help others make informed decisions and make your voice heard. Sign up now and elevate your rental journey!</p>
+      <p class="py-2">Take control of your rental experience. Share honest assessments of your property and landlord with a community of like-minded renters. Help others make informed decisions and make your voice heard. Sign up now and elevate your rental journey!</p>
       <% if(loggedInUser == undefined){ %>   
       <a href="/signup"><button class="btn btn-sm btn-primary">Sign up today</button></a>
       <a href="/feed"><button class="btn btn-sm btn-primary">See reviews</button></a>
       <% } %>
-      <p class="<% if(loggedInUser == undefined){ %>pt-3<% } %>">Our mission is to empower renters in the UK to make informed decisions and elevate their rental experience. We aim to provide a platform where renters can openly and honestly share their experiences with properties and landlords, while fostering a supportive community of like-minded individuals. Through our platform, we strive to promote transparency and accountability in the rental industry, ultimately benefiting all renters in the UK.</p><br>
+      <p class="<% if(loggedInUser == undefined){ %>pt-2<% } %>">Our mission is to empower renters in the UK to make informed decisions and elevate their rental experience. We aim to provide a platform where renters can openly and honestly share their experiences with properties and landlords, while fostering a supportive community of like-minded individuals. Through our platform, we strive to promote transparency and accountability in the rental industry, ultimately benefiting all renters in the UK.
       <% if (locals.messages.errors) { %> <% messages.errors.forEach( el => { %>
         <div class="alert alert-danger"><%= el.msg %></div>
         <% }) %> <% } %> <% if (locals.messages.info) { %> <%
@@ -27,7 +27,7 @@
         Find your next property today!
       </label>
       <input
-          class="input input-sm input-bordered input-primary w-full max-w-xs"
+          class="input input-sm input-bordered input-primary w-72"
           type="text"
           name="property"
           placeholder="Search"
@@ -36,6 +36,7 @@
           <i class="search--icon fa-solid fa-magnifying-glass"></i>
       </button>
   </form>
+</p>
     </div>
   </div>
   </div>
