--- a/public/style.css
+++ b/public/style.css
@@ -3468,6 +3468,10 @@ html {
   width: 24rem;
 }
 
+.w-72 {
+  width: 18rem;
+}
+
 .w-10 {
   width: 2.5rem;
 }
@@ -3476,12 +3480,24 @@ html {
   width: 13rem;
 }
 
-.w-24 {
-  width: 6rem;
+.w-4\/12 {
+  width: 33.333333%;
 }
 
-.w-72 {
-  width: 18rem;
+.w-3\/12 {
+  width: 25%;
+}
+
+.w-64 {
+  width: 16rem;
+}
+
+.w-80 {
+  width: 20rem;
+}
+
+.w-4\/5 {
+  width: 80%;
 }
 
 .max-w-lg {
@@ -3492,16 +3508,8 @@ html {
   max-width: 24rem;
 }
 
-.max-w-xs {
-  max-width: 20rem;
-}
-
 .max-w-xl {
   max-width: 36rem;
-}
-
-.max-w-md {
-  max-width: 28rem;
 }
 
 .flex-1 {
@@ -3527,10 +3535,6 @@ html {
 
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
-.grid-cols-1 {
-  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
 .grid-cols-2 {
@@ -3573,6 +3577,10 @@ html {
   justify-content: space-between;
 }
 
+.justify-around {
+  justify-content: space-around;
+}
+
 .justify-evenly {
   justify-content: space-evenly;
 }
@@ -3595,6 +3603,10 @@ html {
 
 .justify-self-end {
   justify-self: end;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
 }
 
 .rounded-full {
@@ -3642,6 +3654,10 @@ html {
   padding: 1rem;
 }
 
+.p-5 {
+  padding: 1.25rem;
+}
+
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -3687,11 +3703,6 @@ html {
   padding-right: 0.25rem;
 }
 
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
 .pb-2 {
   padding-bottom: 0.5rem;
 }
@@ -3706,10 +3717,6 @@ html {
 
 .pt-2 {
   padding-top: 0.5rem;
-}
-
-.pb-1 {
-  padding-bottom: 0.25rem;
 }
 
 .text-center {
@@ -3863,13 +3870,6 @@ a:hover, i:hover{
   padding: 1rem;
 }
 
-.card-body-feed {
-  display: flex;
-  flex: 1 1 auto;
-  flex-direction: column;
-  gap: 2rem;
-}
-
 @media (min-width: 640px) {
   .sm\:mx-4 {
     margin-left: 1rem;
@@ -3918,16 +3918,16 @@ a:hover, i:hover{
     width: 50%;
   }
 
+  .md\:w-full {
+    width: 100%;
+  }
+
   .md\:max-w-md {
     max-width: 28rem;
   }
 
   .md\:max-w-xl {
     max-width: 36rem;
-  }
-
-  .md\:max-w-lg {
-    max-width: 32rem;
   }
 
   .md\:grid-cols-1 {
@@ -4014,6 +4014,10 @@ a:hover, i:hover{
 
   .lg\:w-1\/2 {
     width: 50%;
+  }
+
+  .lg\:w-full {
+    width: 100%;
   }
 
   .lg\:max-w-full {
