--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -1,51 +1,21 @@
 <%- include('partials/header') -%>
-<div class="container mx-auto px-4 py-5">
+<div class="p-5">
   <!-- row 1 -->
-  <div class="flex flex-col lg:flex-row justify-evenly gap-4">
+  <div class="grid gap-4 lg:grid-cols-3 md:grid-cols-2 ">
       <% for(var i=0; i<property.length; i++) {%>
-    <div class="card max-w-sm bg-base-100 shadow-xl mx-auto">
-      <figure class="h-3/5 bg-base-100">
-        
-        <div class="carousel w-full">
-          <% for(var j=0; j<property[i].images.length; j++) {%>
-          <div id="<%= property[i].images[j].cloudinaryId%>" class="carousel-item relative w-full">
-            <img src="<%= property[i].images[j].url%>" class="rounded-t-2xl" />
-            <!-- buttons -->
-            <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-              <!-- only show buttons if more than 1 img -->
-              <% if(property[i].images.length>1) {%>
-              <!-- if first image -->
-              <% if(j==0) {%>
-                <a href="#<%= property[i].images[property[i].images.length-1].cloudinaryId %>" class="btn btn-accent btn-circle">❮</a> 
-                <a href="#<%= property[i].images[1].cloudinaryId %>" class="btn btn-accent btn-circle">❯</a>
-                <!-- if last image -->
-              <% }else if(j+1 ==property[i].images.length) {%>
-                <a href="#<%= property[i].images[j-1].cloudinaryId %>" class="btn btn-accent btn-circle">❮</a> 
-                <a href="#<%= property[i].images[0].cloudinaryId %>" class="btn btn-accent btn-circle">❯</a>
-                <!-- if middle image -->
-              <% }else { %>
-              <a href="#<%= property[i].images[j-1].cloudinaryId %>" class="btn btn-accent btn-circle">❮</a> 
-              <a href="#<%= property[i].images[j+1].cloudinaryId %>" class="btn btn-accent btn-circle">❯</a>
-              <% } %>
-              <% } %>
-            </div>
-          </div>          
-          <% } %>
-        </div>
-        </figure>
-      
-        <div class="card-body">
-          <h2 class="card-title"><%= property[i].streetName%>, <%= property[i].postcode.toUpperCase()%></h2>
-          <!-- <p><%= property[i].title%></p> -->
-          <div class="card-actions h-full justify-end content-end">
-            <a href="/property/<%= property[i]._id%>"><button class="btn btn-primary">View Property</button></a>
-          </div>
+    <div class="card w-4/5 md:w-full bg-base-100 shadow-xl mx-auto">
+      <figure><img src="<%= property[i].images[0].url%>" alt="Shoes" /></figure>
+      <div class="card-body">
+        <h2 class="card-title"><%= property[i].streetName%>, <%= property[i].postcode.toUpperCase()%></h2>
+        <!-- <p><%= property[i].title%></p> -->
+        <div class="card-actions justify-end">
+          <a href="/property/<%= property[i]._id%>"><button class="btn btn-primary">View Property</button></a>
         </div>
       </div>
-      
-      
+    </div>
     <% } %>
   </div>
 </div>
+
 
 <%- include('partials/footer') -%>
